                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2022-12-16
 * Added generate_options_by_name_where option to Wing::Role::Result::Parent.

2022-05-04
 * Fix permission errors that happen when trying to Ouch an object in the message field.

2022-05-03
 * Handle badly formed JSON Firebase messages gracefully.

2022-02-27
 * Fixed a problem where if creation params were 0 or empty string and that was a valid value creation would fail.

2021-11-28
 * Added wing.suppress_default_axios_errors.

2021-11-15
 * In wing.vue.js wing.base_uri is no longer applied via wing.format_base_uri if the uri supplied starts with http.
 * In wing.vue.js fixed a problem where wing.object_list wasn't passing along with_credentials when creating new objects.
 * In wing.vue.js fixed a problem where wing.firebase wasn't using format_base_uri to request the JWT.

2021-11-14
 * Added REST endpoint /api/user/whoami which returns info about who the currently logged in user is if any.

2021-11-04
 * Added the ability to pass options to wing.format_post_data, and an option in wing.object called post_formatting_options to pass through.

2021-10-26
 * Fix issue with _all promise resolution with variable page and data being returned.

2021-10-25
 * Pass through on_each from the _all method to the _search method in wing.vue.js.

2021-10-24
 * A more promise friendly version of the _all method in wing.vue.js.

2021-10-12
 * Removed id change from 10-9
 * Replaced it with _use_this_id as a rest parameter for creating objects with a specific id.

2021-10-09
 * An id can now be specified when creating an object via Rest.

2021-10-01
 * Added delete_object() method for wing.object to get around validations on things like prettier.

2021-09-29