@@ -1624,14 +1624,38 @@ Vue.component("confirmation-toggle", {
                 <button v-else class="btn btn-secondary" @click="wing.confirmations.toggle()"><i class="fas fa-check-circle"></i> Enable Confirmations</button>`,
 });
 
+
+
 /*
  * Comments.
  */
+
+Vue.component("newcomment", {
+   template : `<thead">
+              <tr v-if="current_user_id">
+                  <td>
+                      <textarea class="form-control" rows="5" v-model="comments.new.comment" title="New Comment"></textarea>
+                  </td>
+                  <td>
+                      <slot name="above-add-comment"></slot>
+                      <button class="btn btn-success" @click="comments.create()"><i class="fas fa-plus"></i> Add Comment</button>
+                  </td>
+              </tr>
+              <tr v-else>
+                <td colspan="2">                    
+                  You must <a :href="'/account?redirect_after='+window.location.href">login or create an account</a> to create a new comment.
+                </td>
+              </tr>
+                </thead>`,
+   props : ['current_user_id','comments']
+});
 
 Vue.component("comments", {
   template: `<template>
         <div class="table-responsive">
           <table class="table table-striped">
+	      <newcomment v-if="new_at_top" :current_user_id="current_user_id" :comments="comments"></newcomment>
+              <tbody>
               <tr v-for="comment in comments.objects">
                   <td style="overflow-wrap: break-word; word-wrap: break-word;hyphens: auto;">
                       <textarea class="form-control" v-if="comment.stash('edit')" rows="5" v-model="comment.properties.comment" v-autosave="comment" title="Comment"></textarea>
@@ -1653,20 +1677,8 @@ Vue.component("comments", {
                       <button class="btn btn-danger btn-sm" @click="comment.delete()" v-show="comment.properties.user_id == current_user_id || is_admin == 1"><i class="fas fa-trash-alt"></i> Delete</button>
                   </td>
               </tr>
-              <tr v-if="current_user_id">
-                  <td>
-                      <textarea class="form-control" rows="5" v-model="comments.new.comment" title="New Comment"></textarea>
-                  </td>
-                  <td>
-                      <slot name="above-add-comment"></slot>
-                      <button class="btn btn-success" @click="comments.create()"><i class="fas fa-plus"></i> Add Comment</button>
-                  </td>
-              </tr>
-              <tr v-else>
-                <td colspan="2">                    
-                  You must <a :href="'/account?redirect_after='+window.location.href">login or create an account</a> to create a new comment.
-                </td>
-              </tr>
+	      </tbody>
+	      <newcomment v-if="!new_at_top" :current_user_id="current_user_id" :comments="comments"></newcomment>
           </table>
       </div>
     </template>`,
@@ -1676,6 +1688,7 @@ Vue.component("comments", {
     "special_badge_user_id",
     "current_user_id",
     "is_admin",
+    "new_at_top",
   ],
   data() {
     return {};
