@@ -6,6 +6,7 @@ with respect to new features and compatibility changes.
 
 2022-12-16
  * Added generate_options_by_name_where option to Wing::Role::Result::Parent.
+ * Added a switch to have new comment box at the top instead of the bottom.
 
 2022-05-04
  * Fix permission errors that happen when trying to Ouch an object in the message field.
